<resources>
    <string name="app_name">TravelBees</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Please wait while we check your credentials... </string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="app_title_text1">Travel</string>
    <string name="app_title_text2">Bees</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="google_drive">Google Drive</string>

    <string name="app_desc">We make your group travel better</string>
    <string name="title_activity_main">Travel Bees</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newTrip">Create a New Trip</string>
    <string name="group_name">Group Name</string>
    <string name="group_owner">Group Owner</string>
    <string name="trip_name">Trip Name:</string>
    <string name="trip_to">Trip to:</string>
    <string name="editProfile">Edit Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="chat_fragment">Welcome to Chat Fragment</string>
    <string name="login_text">lOGIN</string>
    <string name="signInError">Something went wrong on our side. Please try to login again.</string>
    <string name="makeProfileHeader">Let\'s Make Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="btn_upload_photo">Upload Photo</string>
    <string name="txt_next">NEXT</string>
    <string name="username_taken">The username is already taken</string>
    <string name="enter_the_code">Enter the Code</string>
    <string name="hint_x">X</string>
    <string name="verify_code">Verify Code</string>
    <string name="user_display_name_default">User 123</string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="hint_phoneNumber">(XXX) XXX-XXXX</string>
    <string name="edit_profile_photo">Edit Profile photo</string>
    <string name="hint_verify_code">XX-XX-XX</string>
    <string name="verifyCode">Verify Code</string>
</resources>