<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manali.travelbees.ActivityPhoneNumberVerification">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImagePhoneVerification"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/userDisplayNamePhoneVerification"
        android:layout_alignEnd="@+id/enterPhoneNumber"
        android:layout_marginEnd="68dp"
        android:background="@drawable/edit_circle"
        android:src="@drawable/edit_icon_white"
        android:contentDescription="@string/edit_profile_photo" />

    <TextView
        android:id="@+id/userDisplayNamePhoneVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userImagePhoneVerification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/righteous"
        android:text="@string/user_display_name_default"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phoneVerificationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/userDisplayNamePhoneVerification"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_marginEnd="47dp"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:text="@string/enter_your_phone_number"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:textColor="#000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/phoneVerificationHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_phoneNumber"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="14"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/enterVerificationCode"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/phoneVerificationHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_verify_code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="14"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_sendVerificationCode"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@+id/enterPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_textview"
        android:fontFamily="@font/righteous"
        android:startOffset="100"
        android:text="@string/send_code"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_verifyCode"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_below="@+id/enterPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_textview"
        android:fontFamily="@font/righteous"
        android:startOffset="100"
        android:text="@string/verifyCode"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>
