<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.manali.travelbees.ActivityMakeProfile"
    android:background="#FFF">

    <TextView
        android:id="@+id/profileHeader"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fullNameMakeProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:text="@string/makeProfileHeader"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:textColor="#000" />

    <EditText
        android:id="@+id/fullNameMakeProfile"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_above="@+id/userNameMakeProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/full_name"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:nextFocusDown="@+id/userNameMakeProfile"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/userNameMakeProfile"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_above="@+id/btn_upload_photo"
        android:layout_alignStart="@+id/fullNameMakeProfile"
        android:layout_marginBottom="110dp"
        android:background="@drawable/rounded_edittext"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/user_name"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_upload_photo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp"
        android:alpha="0.5"
        android:background="@drawable/circular_transparent_button"
        android:fontFamily="@font/righteous"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        android:text="@string/btn_upload_photo" />

    <Button
        android:id="@+id/btn_nextMakeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_toEndOf="@+id/btn_upload_photo"
        android:background="@drawable/rounded_textview"
        android:fontFamily="@font/righteous"
        android:text="@string/txt_next"
        android:startOffset = "100"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/txt_duplicateUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameMakeProfile"
        android:layout_centerHorizontal="true"
        android:text="@string/username_taken"
        android:textColor="@android:color/holo_red_dark"
        android:fontFamily="@font/righteous"
        android:visibility="invisible"
        android:layout_marginTop="44dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameMakeProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/arrow_upward_black"
        android:visibility="invisible"/>


</RelativeLayout>
