<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/stock2"
    android:orientation="vertical"
    android:weightSum="4">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:elevation="17dp"
        android:src="@mipmap/app_icon"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_below="@+id/settings_image"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/righteous"
        android:text="@string/app_title_text1"
        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
        android:textColor="#FFF"
        android:theme="@style/ThemeOverlay.MyTitleText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_text"
        android:layout_alignBottom="@+id/title_text"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/righteous"
        android:text="@string/app_title_text2"
        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
        android:textColor="#FFA121"
        android:theme="@style/ThemeOverlay.MyTitleText" />

    <TextView
        android:id="@+id/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_desc"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poiret_one"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:alpha="0.6"
        android:background="@drawable/circular_transparent_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:fontFamily="@font/poiret_one"
        android:textAllCaps="false"
        android:textStyle="bold"/>


    <!--android:visibility="visible" />-->
        <!--&lt;!&ndash;tools:visibility="gone" />&ndash;&gt;-->
    <!---->
</RelativeLayout>